--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.light-mode {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.dark-mode {
+  background-color: #1e1e1e;
+  color: #ffffff;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
